# MASS-gym

./: CMakeLists.txt  Dockerfile
.github/workflows/: docker-image.yml
core/: CMakeLists.txt  DARTHelper.cpp  SkeletonPtr.cpp  SkeletonPtr.h  WorldPtr.cpp  WorldPtr.h
data/: metadata.txt
python/: Anchor.py  BVH.cpp  BVH.h  BVH.py  BVHNode.py  CHANNEL.py  CMakeLists.txt  Character.cpp  Character.h  Character.py  DARTHelper.cpp  DARTHelper.h  DARTHelper.py  EnvManager.py  Environment.cpp  Environment.h  Environment.py  Helper.py  Isometry3d.py  Muscle.cpp  Muscle.h  Muscle.py  MuscleTuple.py  MyBodyNodePtr.cpp  MyBodyNodePtr.h  MyIsometry3d.cpp  MyIsometry3d.h  MySkeletonPtr.cpp  MySkeletonPtr.h  MyWorldPtr.cpp  MyWorldPtr.h  dbg.py  main.py
render/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
